<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.horstmann.violet</groupId>
	<artifactId>parent</artifactId>
	<name>Violet UML Editor Parent Maven Project</name>
	<version>1.0.0-SNAPSHOT</version>
	<packaging>pom</packaging>
	<modules>
		<module>violet-framework</module>
		<module>violetplugin-activitydiagram</module>
		<module>violetplugin-classdiagram</module>
		<module>violetplugin-objectdiagram</module>
		<module>violetplugin-sequencediagram</module>
		<module>violetplugin-statediagram</module>
		<module>violetplugin-usecasediagram</module>
		<module>violetproduct-swing</module>
		<!--module>violetproduct-jnlp</module -->
		<module>violetproduct-exe</module>
		<!--module>violetproduct-rpm</module-->
		<module>violetproduct-deb</module>
		<module>violetproduct-web</module>
	</modules>
	<properties>
		<applicationVersion>2.2.2-SNAPSHOT</applicationVersion>
	</properties>
	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
			</resource>
			<resource>
				<directory>src/main/java</directory>
				<includes>
					<include>**/*.gif</include>
					<include>**/*.jpg</include>
					<include>**/*.properties</include>
					<include>**/*.xml</include>
				</includes>
			</resource>
		</resources>
		<pluginManagement>
			<plugins>
				<plugin>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.11.0</version>
					<configuration>
						<release>17</release>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>3.2.3</version>
					<configuration>
					  <skipTests>true</skipTests>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>


	<distributionManagement>
		<repository>
		<id>github</id>
		<name>GitHub Packages</name>
		<url>https://maven.pkg.github.com/violetumleditor/violetumleditor</url>
		</repository>
	</distributionManagement>

	<repositories>
		<repository>
			<id>violet.repo</id>
			<name>Violet's Maven repository (public access)</name>
			<url>https://violet.sourceforge.net/maven2/repo/
            </url>
		</repository>
	</repositories>
</project>
